# tiny-melody-web

./: LICENSE  README.md  folder.json  index.html  package.json  pnpm-lock.yaml  tag.json  vite.config.ts
early-access-v1-abandroned/: package.json  tsconfig.json
early-access-v1-abandroned/src/: App.vue  main.ts
early-access-v1-abandroned/src/components/data/: folder.json
early-access-v2-abandroned/: README.md  index.html  vite.config.ts
early-access-v2-abandroned/src/: App.vue  main.ts
early-access-v2.5-abandoned/src/: App.vue
early-access-v2.5/src/: App.vue  main.ts  reset.scss
early-access-v2.5/src/components/player/: player.vue
plugin/: Cargo.toml
plugin/pkg/: tiny_melody_plugin.js
plugin/src/: lib.rs
src/: App.vue  main.ts
src/assets/: logo.txt
src/components/data/: tag.json
src/components/pages/exploer/: index.vue
src/components/pages/exploer/file_list/: index.vue
src/components/pages/exploer/folder_tree/: index.vue
src/components/pages/exploer/player/: index.vue
src/components/pages/playing/: index.vue
src/components/player/: index.vue  player.vue  player_bottom.vue
src/components/stage/exploer/: index.vue
src/plugin/: tiny_melody_plugin.d.ts  tiny_melody_plugin_bg.wasm  tiny_melody_plugin_bg.wasm.d.ts
src/router/: index.ts
src/store/: index.ts
src/utils/: request.ts
