[package]
name = "tiny-melody-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
id3 = "1.13.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
base64 = "0.22.0"


[lib]
crate-type = ["cdylib"]